--- a/.config
+++ b/.config
@@ -10,11 +10,13 @@ CONFIG_LIBCURL_OPENSSL=y
 CONFIG_LIBCURL_PROXY=y
 CONFIG_NODEJS_ICU_NONE=y
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
+CONFIG_PACKAGE_badblocks=y
 # CONFIG_PACKAGE_boost is not set
 CONFIG_PACKAGE_ca-bundle=y
 # CONFIG_PACKAGE_coreutils is not set
 CONFIG_PACKAGE_curl=y
 # CONFIG_PACKAGE_dns2socks is not set
+CONFIG_PACKAGE_e2fsprogs=y
 # CONFIG_PACKAGE_ipset is not set
 # CONFIG_PACKAGE_ipt2socks is not set
 # CONFIG_PACKAGE_iptables-mod-tproxy is not set
@@ -36,12 +38,15 @@ CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb-uhci=y
 CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb2-pci=y
 # CONFIG_PACKAGE_kmod-usb3 is not set
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libcares=y
+CONFIG_PACKAGE_libcomerr=y
 CONFIG_PACKAGE_libcurl=y
 # CONFIG_PACKAGE_libev is not set
+CONFIG_PACKAGE_libext2fs=y
 CONFIG_PACKAGE_libhttp-parser=y
 # CONFIG_PACKAGE_libipset is not set
 # CONFIG_PACKAGE_libmbedtls is not set
@@ -50,6 +55,7 @@ CONFIG_PACKAGE_libmount=y
 CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libsmartcols=y
 # CONFIG_PACKAGE_libsodium is not set
+CONFIG_PACKAGE_libss=y
 # CONFIG_PACKAGE_libudns is not set
 CONFIG_PACKAGE_libusb-1.0=y
 CONFIG_PACKAGE_libuv=y
