--- a/.config
+++ b/.config
@@ -11,101 +11,62 @@ CONFIG_LIBCURL_PROXY=y
 CONFIG_NODEJS_ICU_NONE=y
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
 CONFIG_PACKAGE_badblocks=y
-# CONFIG_PACKAGE_boost is not set
+CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_ca-bundle=y
-# CONFIG_PACKAGE_coreutils is not set
 CONFIG_PACKAGE_curl=y
-# CONFIG_PACKAGE_dns2socks is not set
 CONFIG_PACKAGE_e2fsprogs=y
-# CONFIG_PACKAGE_ipset is not set
-# CONFIG_PACKAGE_ipt2socks is not set
-# CONFIG_PACKAGE_iptables-mod-tproxy is not set
+CONFIG_PACKAGE_fdisk=y
+CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+CONFIG_PACKAGE_iptables-mod-ipopt=y
 CONFIG_PACKAGE_kmod-crypto-crc32c=y
+CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-ntfs=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
-# CONFIG_PACKAGE_kmod-ip6tables is not set
-# CONFIG_PACKAGE_kmod-ipt-tproxy is not set
+CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
+CONFIG_PACKAGE_kmod-ipt-ipopt=y
 CONFIG_PACKAGE_kmod-lib-crc16=y
-# CONFIG_PACKAGE_kmod-nf-ipt6 is not set
-# CONFIG_PACKAGE_kmod-nf-reject6 is not set
 CONFIG_PACKAGE_kmod-nls-cp437=y
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
 CONFIG_PACKAGE_kmod-nls-utf8=y
+CONFIG_PACKAGE_kmod-sched-connmark=y
+CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
 CONFIG_PACKAGE_kmod-usb-ohci=y
+CONFIG_PACKAGE_kmod-usb-ohci-pci=y
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb-uhci=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb2-pci=y
-# CONFIG_PACKAGE_kmod-usb3 is not set
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libcares=y
 CONFIG_PACKAGE_libcomerr=y
 CONFIG_PACKAGE_libcurl=y
-# CONFIG_PACKAGE_libev is not set
 CONFIG_PACKAGE_libext2fs=y
+CONFIG_PACKAGE_libfdisk=y
 CONFIG_PACKAGE_libhttp-parser=y
-# CONFIG_PACKAGE_libipset is not set
-# CONFIG_PACKAGE_libmbedtls is not set
-# CONFIG_PACKAGE_libmnl is not set
-CONFIG_PACKAGE_libmount=y
+CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libnghttp2=y
+CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libsmartcols=y
-# CONFIG_PACKAGE_libsodium is not set
 CONFIG_PACKAGE_libss=y
-# CONFIG_PACKAGE_libudns is not set
+CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libusb-1.0=y
 CONFIG_PACKAGE_libuv=y
-# CONFIG_PACKAGE_luci-app-accesscontrol is not set
-CONFIG_PACKAGE_luci-app-adguardhome=y
-# CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs is not set
-# CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk is not set
-CONFIG_PACKAGE_luci-app-jd-dailybonus=y
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
+CONFIG_PACKAGE_luci-app-qos=y
 CONFIG_PACKAGE_luci-app-samba=y
-# CONFIG_PACKAGE_luci-app-ssr-plus is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan is not set
-# CONFIG_PACKAGE_luci-app-unblockmusic is not set
-# CONFIG_PACKAGE_luci-app-vlmcsd is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ChinaDNS is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Kcptun is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Shadowsocks is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ShadowsocksR_Server is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ShadowsocksR_Socks is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Shadowsocks_Server is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Shadowsocks_Socks is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Trojan is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_V2ray is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_dnscrypt_proxy is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_dnsforwarder is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ipt2socks is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_privoxy is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_simple-obfs is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_simple-obfs-server is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_udp2raw-tunnel is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_udpspeeder is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_v2ray-plugin is not set
+CONFIG_PACKAGE_luci-i18n-qos-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-samba-zh-cn=y
-# CONFIG_PACKAGE_microsocks is not set
-CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_node=y
-# CONFIG_PACKAGE_resolveip is not set
+CONFIG_PACKAGE_parted=y
+CONFIG_PACKAGE_qos-scripts=y
 CONFIG_PACKAGE_samba36-server=y
-# CONFIG_PACKAGE_shadowsocks-libev-ss-local is not set
-# CONFIG_PACKAGE_shadowsocks-libev-ss-redir is not set
-# CONFIG_PACKAGE_shadowsocksr-libev-ssr-check is not set
-# CONFIG_PACKAGE_shadowsocksr-libev-ssr-local is not set
-# CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir is not set
-# CONFIG_PACKAGE_simple-obfs is not set
-# CONFIG_PACKAGE_tcping is not set
-# CONFIG_PACKAGE_trojan is not set
+CONFIG_PACKAGE_smartmontools=y
+CONFIG_PACKAGE_tc=y
+CONFIG_PACKAGE_terminfo=y
+CONFIG_PACKAGE_uclibcxx=y
 CONFIG_PACKAGE_usbutils=y
-# CONFIG_PACKAGE_vlmcsd is not set
