--- a/.config
+++ b/.config
@@ -8,20 +8,17 @@ CONFIG_LIBCURL_HTTP=y
 CONFIG_LIBCURL_NO_SMB="!"
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_LIBCURL_PROXY=y
-CONFIG_NODEJS_ICU_NONE=y
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
-CONFIG_PACKAGE_UnblockNeteaseMusic=y
 CONFIG_PACKAGE_UnblockNeteaseMusicGo=y
+# CONFIG_PACKAGE_adbyby is not set
 CONFIG_PACKAGE_badblocks=y
 CONFIG_PACKAGE_blkid=y
-# CONFIG_PACKAGE_boost is not set
 CONFIG_PACKAGE_ca-bundle=y
 # CONFIG_PACKAGE_coreutils is not set
 CONFIG_PACKAGE_curl=y
 # CONFIG_PACKAGE_dns2socks is not set
 CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_fdisk=y
-# CONFIG_PACKAGE_ipt2socks is not set
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
 # CONFIG_PACKAGE_iptables-mod-tproxy is not set
@@ -64,16 +61,18 @@ CONFIG_PACKAGE_libhttp-parser=y
 # CONFIG_PACKAGE_libmbedtls is not set
 CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libnghttp2=y
+# CONFIG_PACKAGE_libpcre is not set
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libsmartcols=y
 # CONFIG_PACKAGE_libsodium is not set
 CONFIG_PACKAGE_libss=y
+CONFIG_PACKAGE_libstdcpp=y
 # CONFIG_PACKAGE_libudns is not set
 CONFIG_PACKAGE_libusb-1.0=y
 CONFIG_PACKAGE_libuv=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
+# CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-qos=y
 CONFIG_PACKAGE_luci-app-samba=y
 # CONFIG_PACKAGE_luci-app-ssr-plus is not set
@@ -85,24 +84,25 @@ CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn=y
 CONFIG_PACKAGE_luci-ssl-openssl=y
 CONFIG_PACKAGE_luci-theme-edge=y
 # CONFIG_PACKAGE_microsocks is not set
-CONFIG_PACKAGE_node=y
 CONFIG_PACKAGE_parted=y
 CONFIG_PACKAGE_qos-scripts=y
 # CONFIG_PACKAGE_resolveip is not set
 CONFIG_PACKAGE_samba36-server=y
+# CONFIG_PACKAGE_shadowsocks-libev-config is not set
 # CONFIG_PACKAGE_shadowsocks-libev-ss-local is not set
 # CONFIG_PACKAGE_shadowsocks-libev-ss-redir is not set
 # CONFIG_PACKAGE_shadowsocksr-libev-ssr-check is not set
 # CONFIG_PACKAGE_shadowsocksr-libev-ssr-local is not set
 # CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir is not set
-# CONFIG_PACKAGE_simple-obfs is not set
+# CONFIG_PACKAGE_shadowsocksr-libev-ssr-server is not set
+# CONFIG_PACKAGE_simple-obfs-client is not set
 CONFIG_PACKAGE_smartmontools=y
-CONFIG_PACKAGE_tc=y
+CONFIG_PACKAGE_tc-mod-iptables=y
+CONFIG_PACKAGE_tc-tiny=y
 # CONFIG_PACKAGE_tcping is not set
 CONFIG_PACKAGE_terminfo=y
-# CONFIG_PACKAGE_trojan is not set
 CONFIG_PACKAGE_uclibcxx=y
 CONFIG_PACKAGE_usbutils=y
 # CONFIG_PACKAGE_vlmcsd is not set
+# CONFIG_PACKAGE_wget is not set
 CONFIG_UnblockNeteaseMusic_Go=y
-CONFIG_UnblockNeteaseMusic_NodeJS=y
