--- a/.config
+++ b/.config
@@ -8,7 +8,10 @@ CONFIG_LIBCURL_HTTP=y
 CONFIG_LIBCURL_NO_SMB="!"
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_LIBCURL_PROXY=y
+CONFIG_NODEJS_12=y
+CONFIG_NODEJS_ICU_NONE=y
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
+CONFIG_PACKAGE_UnblockNeteaseMusic=y
 CONFIG_PACKAGE_UnblockNeteaseMusicGo=y
 CONFIG_PACKAGE_badblocks=y
 CONFIG_PACKAGE_blkid=y
@@ -61,6 +64,7 @@ CONFIG_PACKAGE_libusb-1.0=y
 CONFIG_PACKAGE_libuv=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-qos=y
 CONFIG_PACKAGE_luci-app-samba=y
 CONFIG_PACKAGE_luci-app-uhttpd=y
@@ -70,7 +74,7 @@ CONFIG_PACKAGE_luci-i18n-samba-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn=y
 CONFIG_PACKAGE_luci-ssl-openssl=y
 CONFIG_PACKAGE_luci-theme-edge=y
-CONFIG_PACKAGE_openssl-util=y
+CONFIG_PACKAGE_node=y
 CONFIG_PACKAGE_parted=y
 CONFIG_PACKAGE_qos-scripts=y
 CONFIG_PACKAGE_samba36-server=y
@@ -83,3 +87,4 @@ CONFIG_PACKAGE_usbids=y
 CONFIG_PACKAGE_usbutils=y
 # CONFIG_PACKAGE_vlmcsd is not set
 CONFIG_UnblockNeteaseMusic_Go=y
+CONFIG_UnblockNeteaseMusic_NodeJS=y
